FIX: Se corrigen problemas de autenticación